# rdf-construct

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_INDEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  test_examples.sh
docs/: ARCHITECTURE.md  POETRY_SETUP.md  QUICK_REFERENCE.md  README.md  UML.md  UML_PIPELINE_SUMMARY.md  UML_README.md  UML_STYLING_GUIDE.md  UML_STYLING_QUICK_REFERENCE.md  index.md
docs/archive/: EXPLICIT_MODE_IMPLEMENTATION.md  POETRY_QUICK_START.md  QUICK_UML.md  REFACTORING_SUMMARY.md  UML_PIPELINE_SUMMARY.md  UML_README.md  UML_STYLING_README.md  UML_STYLING_SUMMARY.md
docs/dev/: ARCHITECTURE.md  CONTRIBUTING.md  UML_IMPLEMENTATION.md  UML_ODM_RDF_INTEGRATION.md
docs/examples/: EXAMPLES_SHOWCASE.md
docs/user_guides/: CAST_GUIDE.md  CLI_REFERENCE.md  CQ_TEST_GUIDE.md  DESCRIBE_GUIDE.md  DIFF_GUIDE.md  DOCS_GUIDE.md  EXPLICIT_MODE.md  GETTING_STARTED.md  IES_COLOUR_PALETTE_GUIDE.md  IES_COLOUR_REFERENCE.md  IES_COLOUR_SCHEME_COMPARISON.md  LINT_GUIDE.md  LOCALISE_GUIDE.md  MERGE_GUIDE.md  MERGE_SPLIT_GUIDE.md  PLANTUML_IMPORT_GUIDE.md  PROJECT_SETUP.md  QUICK_REFERENCE.md  REFACTOR_GUIDE.md  SHACL_GUIDE.md  STATS_GUIDE.md  UML_GUIDE.md  UML_MODE_DECISION_TREE.md  UML_ODM_RDF_GUIDE.md
examples/: animal_ontology.ttl  basic_ordering.py  building.ttl  building_structure_context.yml  docs_config.yml  example_lint_problematic.ttl  ies_building_contexts.yml  ies_colour_examples.yml  ies_colour_palette.yml  ies_colour_palette_with_instances.yml  ies_profile.yml  merge_config.yml  merge_conflicting.ttl  organisation_ontology.ttl  puml2rdf_config.yml  rdf_lint.yml  simple_ontology.ttl  split_config.yml  split_instances.ttl  uml_contexts.yml  uml_contexts_explicit.yml  uml_contexts_explicit_examples.yml  uml_layouts.yml
examples/cq-test/: cq_tests_animal.yml
examples/describe/: README.md  minimal.ttl  output_json.json  output_markdown.md  output_text.txt  owl_full_example.ttl  well_documented.ttl
examples/localise/: config.yml
examples/merge/: merge_config.yml  merge_core.ttl  merge_extension.ttl  merge_instances.ttl
examples/order/: sample_profile.yml  test_profile.yml
examples/refactor/: deprecations.yml  legacy.ttl  renames.yml  typos.ttl
examples/shacl/: shacl_config.yml
examples/split/: split_monolith.ttl
examples/uml/: example_styled_uml.py  ies_colour_palette.yml  uml_styles.yml
src/rdf_construct/: __init__.py  cli.py
src/rdf_construct/cast/: __init__.py  converter.py
src/rdf_construct/core/: __init__.py  formats.py  profile.py  serialiser.py
src/rdf_construct/docs/renderers/: __init__.py
src/rdf_construct/lint/: engine.py  formatters.py  rules.py
src/rdf_construct/merge/: __init__.py  config.py
src/rdf_construct/uml/: __init__.py  context.py  mapper.py  odm_renderer.py  renderer.py  uml_layout.py  uml_style.py
templates/: ordering_starter.yml  uml_contexts_starter.yml  uml_styles_starter.yml
tests/: conftest.py  test_cast.py  test_cq.py  test_describe.py  test_diff.py  test_docs.py  test_explicit_mode.py  test_inline_blank_nodes.py  test_instance_styling.py  test_lint.py  test_localise.py  test_merge.py  test_odm_renderer.py  test_ordering.py  test_plantuml.py  test_predicate_order.py  test_puml2rdf.py  test_refactor.py  test_serialiser_prefixes.py  test_shacl_gen.py  test_split.py  test_stats.py
tests/fixtures/diff/: v1.0.ttl  v1.1.ttl
tests/fixtures/refactor/: instances.ttl  old_namespace.ttl
